--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,12 +64,20 @@ target-version = ['py38']
 include = '\.pyi?$'
 
 [tool.ruff]
-select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
 line-length = 88
 target-version = "py38"
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP"]
+ignore = [
+    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Missing docstrings
+    "S101",  # Use of assert (needed for tests)
+    "T201",  # Print statements (used in examples)
+    "ANN201",  # Missing return type annotation
+    "PLR2004",  # Magic value comparisons
+]
+
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.mypy]
