Fix import sorting and prevent future linting issues
FINAL FIX for recurring Ruff import organization errors:

1. Sort imports alphabetically (anomaly_grid_py before pytest/time)
2. Add explicit Ruff isort configuration with:
   - force-single-line = true (prevents grouping issues)
   - known-first-party = ["anomaly_grid_py"] (proper categorization)
3. Add pre-commit configuration to auto-fix issues before commit

This should permanently resolve the I001 import organization errors
that keep recurring in CI.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,10 @@ ignore = [
     "PLR2004",  # Magic value comparisons
 ]
 
+[tool.ruff.lint.isort]
+force-single-line = true
+known-first-party = ["anomaly_grid_py"]
+
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
