--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install maturin[patchelf] pytest pytest-cov pytest-benchmark
+        pip install maturin[patchelf] pytest pytest-benchmark
 
     - name: Build package
       run: |
@@ -60,14 +60,7 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest tests/ -v --cov=anomaly_grid_py --cov-report=xml --cov-report=term
-
-    - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: true
+        pytest tests/ -v
 
   lint:
     name: Lint and Format Check
