Fix import organization for Ruff compliance
- Separate standard library and third-party imports with blank line
- Update Ruff isort configuration to be less strict
- Follow Python import conventions: stdlib, third-party, local

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,8 +76,8 @@ ignore = [
 ]
 
 [tool.ruff.lint.isort]
-force-single-line = true
 known-first-party = ["anomaly_grid_py"]
+split-on-trailing-comma = false
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
