--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install maturin[patchelf] pytest pytest-benchmark
+        pip install maturin pytest pytest-benchmark
+    
+    - name: Install patchelf (Linux only)
+      if: runner.os == 'Linux'
+      run: pip install patchelf
 
     - name: Build package
       run: |
