--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ Repository = "https://github.com/abimael10/anomaly-grid-py"
 [project.optional-dependencies]
 dev = [
     "pytest>=6.0",
-    "maturin[patchelf]>=1.0",
+    "maturin>=1.0",
     "mypy>=1.0",
     "black>=23.0",
     "ruff>=0.1.0",
