--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,28 +4,40 @@ build-backend = "maturin"
 
 [project]
 name = "anomaly-grid-py"
-version = "0.1.0"
-description = "Python bindings for anomaly detection using Markov models"
-authors = [
-    {name = "Juan Abimael Santos Castillo", email = "juanabimael@gmail.com"}
-]
+version = "0.3.0"
+description = "High-performance sequence anomaly detection with minimal dependencies"
+authors = [{name = "Juan Abimael Santos Castillo", email = "juanabimael@gmail.com"}]
+license = {text = "MIT"}
 readme = "README.md"
-license = {file = "LICENSE"}
 requires-python = ">=3.8"
-keywords = ["anomaly-detection", "markov-models", "sequence-analysis"]
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Rust",
-    "Topic :: Scientific/Engineering",
-    "Topic :: Software Development :: Libraries :: Python Modules",
+
+# MINIMAL DEPENDENCIES - only essentials
+dependencies = [
+    "numpy>=1.20.0",  # Essential for array operations and zero-copy
+]
+
+# Optional dependencies for development only
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.0",
+    "maturin>=1.0",
+    "psutil",  # For memory benchmarking only
+]
+
+benchmarks = [
+    "psutil",  # Memory monitoring
+    "matplotlib",  # Optional plotting
+]
+
+docs = [
+    "sphinx>=5.0",
+    "sphinx-rtd-theme>=1.0",
+    "myst-parser>=0.18",
+]
+
+test = [
+    "pytest>=6.0",
+    "pytest-benchmark>=4.0",
 ]
 
 [project.urls]
@@ -33,28 +45,10 @@ Homepage = "https://github.com/abimael10/anomaly-grid-py"
 Repository = "https://github.com/abimael10/anomaly-grid-py"
 "Bug Tracker" = "https://github.com/abimael10/anomaly-grid-py/issues"
 
-[project.optional-dependencies]
-dev = [
-    "pytest>=6.0",
-    "maturin>=1.0",
-    "mypy>=1.0",
-    "black>=23.0",
-    "ruff>=0.1.0",
-    "pre-commit>=3.0",
-]
-docs = [
-    "sphinx>=5.0",
-    "sphinx-rtd-theme>=1.0",
-    "myst-parser>=0.18",
-]
-test = [
-    "pytest>=6.0",
-    "pytest-benchmark>=4.0",
-]
-
 [tool.maturin]
 python-source = "python"
 module-name = "anomaly_grid_py._core"
+
 
 [tool.black]
 line-length = 88
@@ -74,37 +68,4 @@ ignore = [
     "ANN201",  # Missing return type annotation
     "PLR2004",  # Magic value comparisons
 ]
-
-[tool.ruff.lint.isort]
-known-first-party = ["anomaly_grid_py"]
-split-on-trailing-comma = false
-
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-
-[tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_equality = true
-
-[tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q --strict-markers --strict-config"
-testpaths = ["tests"]
-markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
-    "benchmark: marks tests as benchmarks",
-]
-
 
