--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,8 @@ jobs:
         args: --release --out dist --find-interpreter
         sccache: 'true'
         manylinux: auto
+      env:
+        PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
@@ -49,6 +51,8 @@ jobs:
         target: ${{ matrix.target }}
         args: --release --out dist --find-interpreter
         sccache: 'true'
+      env:
+        PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
@@ -71,6 +75,8 @@ jobs:
         target: ${{ matrix.target }}
         args: --release --out dist --find-interpreter
         sccache: 'true'
+      env:
+        PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
       uses: actions/upload-artifact@v4
       with:
@@ -86,6 +92,8 @@ jobs:
       with:
         command: sdist
         args: --out dist
+      env:
+        PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload sdist
       uses: actions/upload-artifact@v4
       with:
