--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
         args: --release --out dist --find-interpreter
         sccache: 'true'
         manylinux: auto
+        skip: pp311  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
@@ -51,6 +52,7 @@ jobs:
         target: ${{ matrix.target }}
         args: --release --out dist --find-interpreter
         sccache: 'true'
+        skip: pp311  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
@@ -75,6 +77,7 @@ jobs:
         target: ${{ matrix.target }}
         args: --release --out dist --find-interpreter
         sccache: 'true'
+        skip: pp311  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
