Moved the --skip pp311 parameter from a separate YAML parameter to the args string

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,10 +152,9 @@ jobs:
     - name: Build wheels
       uses: PyO3/maturin-action@v1
       with:
-        args: --release --out dist --find-interpreter
+        args: --release --out dist --find-interpreter --skip pp311
         sccache: 'true'
         manylinux: auto
-        skip: pp311  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
 
