--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,9 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: ${{ matrix.target }}
-        args: --release --out dist --find-interpreter
+        args: --release --out dist --interpreter python3.8 python3.9 python3.10 python3.11 python3.12 python3.13 pypy3.10
         sccache: 'true'
         manylinux: auto
-        skip: "pp311"  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
@@ -50,9 +49,8 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: ${{ matrix.target }}
-        args: --release --out dist --find-interpreter
+        args: --release --out dist --interpreter python3.8 python3.9 python3.10 python3.11 python3.12 python3.13 pypy3.10
         sccache: 'true'
-        skip: "pp311"  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
@@ -75,9 +73,8 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: ${{ matrix.target }}
-        args: --release --out dist --find-interpreter
+        args: --release --out dist --interpreter python3.8 python3.9 python3.10 python3.11 python3.12 python3.13 pypy3.10
         sccache: 'true'
-        skip: "pp311"  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
     - name: Upload wheels
