--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,10 +151,9 @@ jobs:
     - name: Build wheels
       uses: PyO3/maturin-action@v1
       with:
-        args: --release --out dist --find-interpreter
+        args: --release --out dist --interpreter python3.8 python3.9 python3.10 python3.11 python3.12 python3.13 pypy3.10
         sccache: 'true'
         manylinux: auto
-        skip: "pp311"  # Skip PyPy 3.11 due to PyO3 0.21.2 compatibility
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
 
