--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,11 +151,12 @@ jobs:
     - name: Build wheels
       uses: PyO3/maturin-action@v1
       with:
-        args: --release --out dist --interpreter python3.8 python3.9 python3.10 python3.11 python3.12 python3.13 pypy3.10
+        args: --release --out dist --find-interpreter
         sccache: 'true'
         manylinux: auto
       env:
         PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
+      continue-on-error: true
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
