--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,28 @@ build-backend = "maturin"
 [project]
 name = "anomaly-grid-py"
 version = "0.4.0"
-description = "High-performance sequence anomaly detection with minimal dependencies"
+description = "Deviation detection using variable-order Markov-chains in finite alphabet sequences"
 authors = [{name = "Juan Abimael Santos Castillo", email = "juanabimael@gmail.com"}]
 license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.8"
+keywords = ["anomaly-detection", "sequence-analysis", "markov-models", "markov-chains", "machine-learning"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Rust",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 
 # MINIMAL DEPENDENCIES - only essentials
 dependencies = [
